-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0
-
None
-
Linux/X11
-
-
ab6861b01ff9c14fd1648cb725da17d1ebf3faea (qt/qtbase/dev) a75f423e26f52e34334ad2aef551a324651fb7cd (qt/qtbase/5.15)
Steps to reproduce:
- press the mouse button on the main menu (e.g. "Help" in Qt Creator),
- hover the menu action (e.g. "About Qt Creator...")
- release the mouse button
Current behavior:
Nothing happens, user must explicitly click on the menu action to trigger it.
Expected behavior:
Menu action is triggered as in Qt <= 5.14, GTK or native Windows apps.
—
The same issue for context menus.
- is duplicated by
-
QTBUG-86107 QMenu action not anymore activated on mouse release
-
- Closed
-
-
QTBUG-85015 [REG: 5.14->5.15] Menu items no longer activate on mouse button release
-
- Closed
-
-
QTBUG-85022 [REG 5.14.2 -> 5.15.0] Pressing, moving, then releasing a mouse button does not trigger the highlighted menu action
-
- Closed
-
-
QTBUG-85166 Menu options need extra click to activate
-
- Closed
-
- resulted from
-
QTBUG-82538 contextMenu in Popup: mouseMoveEvent with LMB + mouseReleaseEvent sent to focus widget after context menu dismissed
-
- Closed
-